Edit Github.io link

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <h2 class="l-Section-title h3">Projects</h2>
             <div class="l-Section-content">
                 <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://yorkittran.github.io/">yorkittran.github.io</a></h3>
+                    <h3><a class="u-link" href="https://github.com/yorkittran/yorkittran.github.io">yorkittran.github.io</a></h3>
                     <p>Personal resume with HTML/CSS</p>
                 </div>
 
