Update avatar and content

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <img src="avatar.jpg">
                 </div>
                 <p>
-                    Binh Thanh District, HCMC<br>
+                    Tan Binh District, HCMC<br>
                     January 23rd, 1999<br>
                     (+84) 935 444 261<br>
                     <a class="u-link" href="mailto:yorkittran@gmail.com">yorkittran@gmail.com</a>
@@ -85,8 +85,8 @@
                     <li>Experienced with
                         <strong class="Tag">Java</strong>,
                         <strong class="Tag">C#</strong>,
-                        <strong class="Tag">Ruby</strong>,
-                        <strong class="Tag">Frameworks</strong> (.NET Framework, Rails)
+                        <strong class="Tag">PHP</strong>,
+                        <strong class="Tag">Frameworks</strong> (.NET Framework, Zend, Laravel)
                     </li>
                     <li>Proficient with
                         <strong class="Tag">Version Control Systems</strong> (Git),
@@ -187,21 +187,6 @@
                 <div class="l-Section-group">
                     <h3><a class="u-link" href="https://github.com/contilfin/voyage">voyage</a></h3>
                     <p>Discover, plan and book your perfect trip with expert advice, travel guides, destination</p>
-                </div>
-
-                <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/yorkittran/demo_blog">demo_blog</a></h3>
-                    <p>Demo Blog with Rails</p>
-                </div>
-
-                <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/yorkittran/demo_twitter">demo_twitter</a></h3>
-                    <p>Demo Twitter with Rails</p>
-                </div>
-
-                <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/yorkittran/instagram">instagram</a></h3>
-                    <p>Demo Instagram with Rails</p>
                 </div>
 
                 <div class="l-Section-group">
