--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Resume - Tran Tuan Anh</title>
+    <title>Tran Tuan Anh</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="resume-icon.jpg">
+    <link rel="shortcut icon" href="avatar.jpg">
     <link href="main.css" rel="stylesheet" />
 </head>
 
 <body>
-
+    <!-- Navbar -->
     <nav class="Navbar">
         <div class="l-Wrapper l-Wrapper--reset@sm-down">
             <ul class="u-pullRight">
                 <li>
-                    <a class="Navbar-btn Navbar-btn--main" href="https://github.com/yorkittran/yorkittran.github.io/raw/master/Resume%20-%20Tran%20Tuan%20Anh.pdf">
+                    <a class="Navbar-btn Navbar-btn--main" href="https://drive.google.com/file/d/1r60C1abKLinDo3emwH5cGSOaMHYMmXip/view?usp=sharing">
                         Download
                         <span>(pdf)</span>
                     </a>
@@ -25,7 +25,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/in/tuan-anh-tran-63b093192/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/yorkittran/">LinkedIn</a>
                 </li>
                 <li>
                     <a href="https://github.com/yorkittran">GitHub</a>
@@ -38,7 +38,7 @@
     </nav>
 
     <article class="l-Wrapper">
-
+        <!-- Information -->
         <div class="l-Header">
             <div class="l-Header-col">
                 <a href="https://github.com/yorkittran">
@@ -47,7 +47,7 @@
                             Tuan Anh
                             <br> Tran
                         </span>
-                        <span class="Title-sub">Web Development Intern</span>
+                        <span class="Title-sub">Web Developer</span>
                     </h1>
                 </a>
             </div>
@@ -63,17 +63,17 @@
                 </p>
             </div>
         </div>
-
+        <!-- About -->
         <section class="l-Section">
-            <h2 class="l-Section-title h3 u-hidden@sm-down">Profile</h2>
+            <h2 class="l-Section-title h3 u-hidden@sm-down">About</h2>
             <div class="l-Section-content">
-                <p>I'm a web development intern with a strong passionate in coding and learning things. I enjoy
+                <p>I'm a web developer with a strong passionate in coding and learning things. I enjoy
                     creating beautiful websites and web applications. Have good eyes for design and typography, high attention to
-                    detail. I have enough self-consciousness and patience to spend most time front of laptop to self-study with online resources, courses and reading blogs. <br>
+                    detail. I have enough self-consciousness and patience to spend most time front of laptop to self-study with online resources, courses and reading blogs. <br><br>
                     Creative, flexible and hardworking teamate.</p>
             </div>
         </section>
-
+        <!-- Skills -->
         <section class="l-Section">
             <h2 class="l-Section-title h3">Skills</h2>
             <div class="l-Section-content">
@@ -86,7 +86,8 @@
                         <strong class="Tag">Java</strong>,
                         <strong class="Tag">C#</strong>,
                         <strong class="Tag">PHP</strong>,
-                        <strong class="Tag">Frameworks</strong> (.NET Framework, Zend, Laravel)
+                        <strong class="Tag">Ruby</strong>,
+                        <strong class="Tag">Frameworks</strong> (.NET Framework, Zend, Laravel, Rails)
                     </li>
                     <li>Proficient with
                         <strong class="Tag">Version Control Systems</strong> (Git),
@@ -110,105 +111,157 @@
                 </ul>
             </div>
         </section>
-
+        <!-- Work Experience -->
+        <section class="l-Section">
+            <h2 class="l-Section-title h3">Work Experience</h2>
+            <div class="l-Section-content">
+                <div class="l-Section-group">
+                    <h3>Web Development Intern</h3>
+                    <a class="u-link" href="https://www.actbrain-vn.com/">Act Brain Vietnam Corporation</a> (HCMC)
+                    <br>Sep 2019 – Dec 2019
+                    <p>
+                        Working with <strong class="Tag">BPOShinjin</strong> (Team-size: 10+)<br>
+                        - Write front-end and back-end code (using Zend Framework)<br>
+                        - Increase performance of queries<br>
+                        - Write PHP Unit Test<br>
+                        - Do Integration Test for other co-workers
+                    </p>
+                </div>
+                <div class="l-Section-group">
+                    <h3>Fresher Web Developer</h3>
+                    <a class="u-link" href="https://www.actbrain-vn.com/">Act Brain Vietnam Corporation</a> (HCMC)
+                    <br>Jan 2020 – Mar 2020
+                    <p>
+                        Participate in <strong class="Tag">Next Cafe</strong> (Team-size: 10+)<br>
+                        - Write PHP Unit Test<br>
+                        - Do Integration Test for other co-workers
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- Volunteer Experience -->
+        <section class="l-Section">
+            <h2 class="l-Section-title h3">Volunteer Experience</h2>
+            <div class="l-Section-content">
+                <div class="l-Section-group">
+                    <h3>Mentor</h3>
+                    <a class="u-link" href="https://www.facebook.com/shecodesvietnam/">SheCodes Hackathon</a> (HCMC)
+                    <br>Jun 2020 – July 2020
+                    <p>
+                        SheCodes Vietnam is a non-profit organization that encourages women to participate in the field of Information Technology, thereby gradually closing the gender gap in this field.
+                    </p>
+                </div>
+                <div class="l-Section-group">
+                    <h3>Vice President of Club</h3>
+                    <a class="u-link" href="https://www.facebook.com/fptuhcmbasketballclub">FPT Basketball Club</a> (University)
+                    <br>Sep 2017 – Present
+                    <p>
+                        A basketball club in my university. I joined the club from the beginning. We practice hard and harder. And again, we won some tournaments. It is great to live with your passions.
+                    </p>
+                </div>
+                <div class="l-Section-group">
+                    <h3>Head of IT Department</h3>
+                    <a class="u-link" href="https://www.facebook.com/YCCLQD/">Young Creators Club</a> (High School)
+                    <br>Sep 2015 – May 2017
+                    <p>
+                        A club for young creators in my high school. I joined the club from the very first day of me in high school, with my passion for science and a lot of contributing to club's event, I've been promoted to the head of IT department.
+                    </p>
+                </div>
+                <div class="l-Section-group">
+                    <h3>Co-Founder</h3>
+                    <a class="u-link" href="https://www.facebook.com/lacacousticlqd/">Lac Acoustic Club</a> (High School)
+                    <br>Sep 2016 – May 2017
+                    <p>
+                        An acoustic music club in my high school. I and my friends formed this club to have a place to play guitar, drums and share  with each other, and perform some mini-concerts in my school.
+                    </p>
+                </div>
+                <div class="l-Section-group">
+                    <h3>President of Club</h3>
+                    <a class="u-link" href="https://www.actbrain-vn.com/">AH-Team</a> (High School)
+                    <br>Sep 2016 – May 2017
+                    <p>
+                        A basketball club in my high school. I joined the club and participated many tournaments with team when I was a 1st year student. After got some medals, I was voted for the head position. We share our hobbies together, play together and win together.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- Education -->
         <section class="l-Section">
             <h2 class="l-Section-title h3">Education</h2>
             <div class="l-Section-content">
                 <div class="l-Section-group">
                     <h3>Software Engineering</h3>
                     <a class="u-link" href="https://hcmuni.fpt.edu.vn/">FPT University</a> (HCMC)
-                    <br> 2017 - 2021
+                    <br>2017 - 2021
                     <p>Currently Junior with 50% 4-years Scholarship</p>
                 </div>
-
                 <div class="l-Section-group">
-                    <h3>Information and Technology Major Class</h3>
+                    <h3>IT Specialized Class</h3>
                     <a class="u-link" href="http://www.thpt-lequydon-danang.edu.vn/">Le Quy Don Gifted High School</a> (Da Nang)
-                    <br> 2014 - 2017
-                    <p>Graduated with a good certificate</p>
-                </div>
-
-                <div class="l-Section-group">
-                    <h3>Self-Learning</h3>
-                    <a class="u-link" href="https://www.google.com/">Internet</a>
-                    <br> 2017 - Forever
-                    <p>Taking online courses, research, reading aricles, making side-projects</p>
+                    <br>2014 - 2017
+                    <p>Graduated with GPA 8.5/10</p>
                 </div>
             </div>
         </section>
-
-        <section class="l-Section">
-            <h2 class="l-Section-title h3">Achivements</h2>
-            <div class="l-Section-content">
-                <ul>
-                    <li>
-                        <strong class="Tag">3rd Place</strong> at Vifotec National 2017 with SmarBots Project
-                    </li>
-                    <li>
-                        <strong class="Tag">3rd Place</strong> at Young Maker Challenger National 2017
-                    </li>
-                    <li>
-                        <strong class="Tag">1st Place</strong> at Viet Nam Science and Engineering Fair (ViSEF) Regional 2017
-                    </li>
-                    <li>
-                        <strong class="Tag">2nd Place</strong> at Group D3, Young Information and Technology National 2017
-                    </li>
-                    <li>
-                        <strong class="Tag">1st Place</strong> at Group D3, Young Information and Technology Regional 2017
-                    </li>
-                    <li>
-                        <strong class="Tag">3rd Place</strong> at Robodnic Da Nang 2017 with LQD-Inventors Team
-                    </li>
-                    <li>
-                        <strong class="Tag">2nd Place</strong> at Student Contest 2016
-                    </li>
-                </ul>
-            </div>
-        </section>
-
+        <!-- Projects -->
         <section class="l-Section">
             <h2 class="l-Section-title h3">Projects</h2>
             <div class="l-Section-content">
                 <div class="l-Section-group">
                     <h3><a class="u-link" href="https://github.com/yorkittran/yorkittran.github.io">yorkittran.github.io</a></h3>
-                    <p>Personal resume with HTML/CSS</p>
+                    <p>Personal CV with HTML/CSS</p>
                 </div>
-
                 <div class="l-Section-group">
-                    <h3><a class="u-link" href="https://github.com/smart-bots">The SmartBots System</a></h3>
-                    <p>A cheap solution for smarthome, build on top of Laravel/MariaDB/Redis/NodeJS/JWT/Socket.io/Arduino</p>
+                    <h3><a class="u-link" href="https://github.com/so-lon/socfi">socfi</a></h3>
+                    <p>Soccer Field Management System, for Field Owner and Admin to manage booking, promotion, stadium, etc. using Laravel</p>
                 </div>
-
+                <div class="l-Section-group">
+                    <h3><a class="u-link" href="https://github.com/so-lon/socfi-mobile">socfi-mobile</a></h3>
+                    <p>Mobile version for Soccer Field Management System, help Player (user) to find and book easily on their phone, using React Native</p>
+                </div>
+                <div class="l-Section-group">
+                    <h3><a class="u-link" href="https://github.com/yorkittran/paper">paper</a></h3>
+                    <p>A Task Management App for PRM311 course, build by React Native</p>
+                </div>
+                <div class="l-Section-group">
+                    <h3><a class="u-link" href="https://github.com/yorkittran/paper-api">paper-api</a></h3>
+                    <p>An API for Paper app to handle backend, using Laravel</p>
+                </div>
+                <div class="l-Section-group">
+                    <h3><a class="u-link" href="https://github.com/smart-bots">The Smart Bots System</a></h3>
+                    <p>IoT project - cheap solution for smarthome, a network consists of multiple bots, helps people in control of electronics by attaching these bots onto the switch, button, plug,... instead of replaces them. Contest in many major competitions in Vietnam and won high prizes. Built on top of Laravel, NodeJS, and Arduino, Intel Edison.</p>
+                </div>
                 <div class="l-Section-group">
                     <h3><a class="u-link" href="https://github.com/yorkittran/concept">concept</a></h3>
                     <p>A travel website - personal project for PRJ321, build on top of Java</p>
                 </div>
-
                 <div class="l-Section-group">
                     <h3><a class="u-link" href="https://github.com/contilfin/voyage">voyage</a></h3>
                     <p>Discover, plan and book your perfect trip with expert advice, travel guides, destination</p>
                 </div>
-
                 <div class="l-Section-group">
                     <h3><a class="u-link" href="https://github.com/yorkittran/coding-library">coding-library</a></h3>
                     <p>A library of C/C++ source code</p>
                 </div>
-
             </div>
         </section>
-
+        <!-- Accomplishments -->
+        <section class="l-Section">
+            <h2 class="l-Section-title h3">Accomplishments</h2>
+            <div class="l-Section-content">
+                <ul>
+                    <li><strong>1st Place</strong> at Viet Nam Science and Engineering Fair (ViSEF) Regional 2017</li>
+                    <li><strong>1st Place</strong> at Group D3, Young Information and Technology Regional 2017</li>
+                    <li><strong>2nd Place</strong> at Group D3, Young Information and Technology National 2017</li>
+                    <li><strong>3rd Place</strong> at Vifotec National 2017 with SmarBots Project</li>
+                    <li><strong>3rd Place</strong> at Young Maker Challenger National 2017</li>
+                    <li><strong>3rd Place</strong> at Robodnic Da Nang 2017 with LQD-Inventors Team</li>
+                    <li><strong>2nd Place</strong> at Student Contest 2016</li>
+                </ul>
+            </div>
+        </section>
+        <section class="l-Section"></section>
     </article>
-
-    <div class="l-Wrapper u-keyline">
-        <div class="l-Footer">
-            <div class="l-Footer-col">
-                <strong class="Tag">Tran Tuan Anh</strong>
-            </div>
-            <div class="l-Footer-col Contact">
-                <a href="mailto:yorkittran@gmail.com">yorkittran@gmail.com</a>
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
