--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             Tuan Anh
                             <br> Tran
                         </span>
-                        <span class="Title-sub">Web Developer</span>
+                        <span class="Title-sub">Product Engineer</span>
                     </h1>
                 </a>
             </div>
@@ -56,9 +56,9 @@
                     <img src="avatar.jpg">
                 </div>
                 <p>
-                    Tan Binh District, HCMC<br>
+                    District 7, HCMC<br>
                     January 23rd, 1999<br>
-                    (+84) 935 444 261<br>
+                    (+84) 366 08 2301<br>
                     <a class="u-link" href="mailto:yorkittran@gmail.com">yorkittran@gmail.com</a>
                 </p>
             </div>
@@ -67,7 +67,7 @@
         <section class="l-Section">
             <h2 class="l-Section-title h3 u-hidden@sm-down">About</h2>
             <div class="l-Section-content">
-                <p>I'm a web developer with a strong passionate in coding and learning things. I enjoy
+                <p>I'm a product engineer with a strong passionate in coding and learning things. I enjoy
                     creating beautiful websites and web applications. Have good eyes for design and typography, high attention to
                     detail. I have enough self-consciousness and patience to spend most time front of laptop to self-study with online resources, courses and reading blogs. <br><br>
                     Creative, flexible and hardworking teamate.</p>
@@ -82,20 +82,19 @@
                         <strong class="Tag">HTML</strong>,
                         <strong class="Tag">CSS</strong>
                     </li>
-                    <li>Experienced with
-                        <strong class="Tag">Java</strong>,
-                        <strong class="Tag">C#</strong>,
-                        <strong class="Tag">PHP</strong>,
-                        <strong class="Tag">Ruby</strong>,
-                        <strong class="Tag">Frameworks</strong> (.NET Framework, Zend, Laravel, Rails)
-                    </li>
                     <li>Proficient with
+                        <strong class="Tag">Ruby</strong>,
+                        <strong class="Tag">Ruby On Rails</strong> as Server Side,
+                        <strong class="Tag">JavaScript</strong>,
+                        <strong class="Tag">VueJS</strong> as Frontend Side
+                    </li>
+                    <li>Experienced with
                         <strong class="Tag">Version Control Systems</strong> (Git),
                         <strong class="Tag">Boostrap</strong>,
                         <strong class="Tag">Terminal/ZSH</strong>,
-                        <strong class="Tag">MSSQL</strong>,
-                        <strong class="Tag">PostgresSQL</strong>,
-                        <strong class="Tag">Docker</strong>
+                        <strong class="Tag">MySQL</strong>,
+                        <strong class="Tag">Docker</strong>, and many
+                        <strong class="Tag">AWS Services</strong>
                     </li>
                     <li>Skilled in creating
                         <strong class="Tag">Style Guides</strong>,
@@ -104,7 +103,6 @@
                     </li>
                     <li>Knowledgeable about
                         <strong class="Tag">Adruino</strong>,
-                        <strong class="Tag">JavaScript</strong>,
                         <strong class="Tag">Data Structure & Algorithm</strong>, familar with
                         <strong class="Tag">Maths</strong>
                     </li>
@@ -115,6 +113,18 @@
         <section class="l-Section">
             <h2 class="l-Section-title h3">Work Experience</h2>
             <div class="l-Section-content">
+                <div class="l-Section-group">
+                    <h3>Product Engineer</h3>
+                    <a class="u-link" href="https://corp.raksul.com/en/">RAKSUL INC.</a> (HCMC)
+                    <br>Aug 2020 – Now
+                    <p>
+                        Work with many teams (Avg. Team-size: 4+)<br>
+                        - Using Ruby On Rails to create microservices<br>
+                        - Involved to creating 2 products from beginning<br>
+                        - Learned VueJS and able to handle Frontend work as well<br>
+                        - Enhancing the performance on the running products
+                    </p>
+                </div>
                 <div class="l-Section-group">
                     <h3>Web Development Intern</h3>
                     <a class="u-link" href="https://www.actbrain-vn.com/">Act Brain Vietnam Corporation</a> (HCMC)
@@ -146,7 +156,7 @@
                 <div class="l-Section-group">
                     <h3>Mentor</h3>
                     <a class="u-link" href="https://www.facebook.com/shecodesvietnam/">SheCodes Hackathon</a> (HCMC)
-                    <br>Jun 2020 – July 2020
+                    <br>Jun 2020 – July 2020 & July 2021 – July 2021
                     <p>
                         SheCodes Vietnam is a non-profit organization that encourages women to participate in the field of Information Technology, thereby gradually closing the gender gap in this field.
                     </p>
